<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.respirator.i.patienter.patienter_i_respirator.activities.SettingsActivity">

    <ImageView
        android:id="@+id/input_btn"
        android:layout_width="250dp"
        android:layout_height="138dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="25dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_click_gesture" />

    <ImageView
        android:id="@+id/sound_btn"
        android:layout_width="250dp"
        android:layout_height="138dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="25dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_sound" />

    <ImageView
        android:id="@+id/fontsize_btn"
        android:layout_width="250dp"
        android:layout_height="139dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="25dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_fontsize" />

    <ImageView
        android:id="@+id/language_btn"
        android:layout_width="250dp"
        android:layout_height="139dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="25dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fontsize_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_language" />

    <ImageView
        android:id="@+id/reset_btn"
        android:layout_width="250dp"
        android:layout_height="138dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="25dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_settings_reset" />

    <ImageView
        android:id="@+id/home_btn"
        android:layout_width="110dp"
        android:layout_height="116dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_grey"
        android:paddingBottom="15dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/home_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/startside"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/home_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/home_btn"
        app:layout_constraintRight_toRightOf="@+id/home_btn"
        app:layout_constraintTop_toTopOf="@+id/home_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/input_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inputmetode"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/input_btn"
        app:layout_constraintEnd_toEndOf="@+id/input_btn"
        app:layout_constraintStart_toStartOf="@+id/input_btn"
        app:layout_constraintTop_toTopOf="@+id/input_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/sound_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lyd"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sound_btn"
        app:layout_constraintEnd_toEndOf="@+id/sound_btn"
        app:layout_constraintStart_toStartOf="@+id/sound_btn"
        app:layout_constraintTop_toTopOf="@+id/sound_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/fontsize_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/skriftstørrelse"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fontsize_btn"
        app:layout_constraintEnd_toEndOf="@+id/fontsize_btn"
        app:layout_constraintStart_toStartOf="@+id/fontsize_btn"
        app:layout_constraintTop_toTopOf="@+id/fontsize_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/language_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sprog"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/language_btn"
        app:layout_constraintEnd_toEndOf="@+id/language_btn"
        app:layout_constraintStart_toStartOf="@+id/language_btn"
        app:layout_constraintTop_toTopOf="@+id/language_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reset_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gendan"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/reset_btn"
        app:layout_constraintEnd_toEndOf="@+id/reset_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reset_btn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/settings_view"
        android:layout_width="711dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/CategoryView"
        android:textColor="@color/darkGrey"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fontsize_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/settingsFragmentContainer"
        android:layout_width="1003dp"
        android:layout_height="600dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fontsize_btn"
        app:layout_constraintTop_toBottomOf="@+id/home_btn">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
